--- a/nginx-hostname/nginx-hostname-deployment.yaml
+++ b/nginx-hostname/nginx-hostname-deployment.yaml
@@ -12,7 +12,7 @@ spec:
   selector:
     matchLabels:
       app: nginx-hostname
-  replicas: 1
+  replicas: 2
   template:
     metadata:
       labels:
@@ -21,3 +21,7 @@ spec:
       containers:
         - name: nginx-hostname
           image: stenote/nginx-hostname:v1.0
+          resources:
+            requests:
+              memory: "4Gi"
+              cpu: "1050m"
